# houdini2chat

./: .gitignore  DEV_README.md  Evaluation.md  README.md
.github/: copilot-instructions.md
.github/prompts/: .prompt.md
docs/: DEV_README.md  Evaluation.md  help.md  presentation.md
hda/: sop_rendermagix.houdini_2_chat.0.1.0.hdalc  sop_rendermagix.houdini_2_chat.1.0.hdalc
hda_scripts/: PythonModule.py  extract_functions.py  gnode.py  hda_manager.py  houdini_node_manager.py  main.py  node_graph.py  render_manager.py
hda_scripts/templates/: branches_unit.py.j2  general_macros.py.j2  loop_branches.py.j2  loop_unit.py.j2  network_full.py.j2  network_unit.py.j2  nodes_unit.py.j2
tools/: pyproject.toml
tools/network_visualizer/: main.py  parser.py  test.py
